fix(buttons): make button less high on mobile

--- a/components/buttons/buttons.less
+++ b/components/buttons/buttons.less
@@ -60,7 +60,7 @@
 
 	&.btn-large {
 		font-weight: @font-weight-bold;
-		padding: @spacing-small @spacing-large;
+		padding: @spacing-default @spacing-large;
 
 		@media @screen-medium {
 			padding: 18px @spacing-default*5;
